--- a/gamaacademy/noquadro/index.html
+++ b/gamaacademy/noquadro/index.html
@@ -5,26 +5,40 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <title></title>
+    <!-- Google Tag Manager -->
+        <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+        new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+        j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+        'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+        })(window,document,'script','dataLayer','GTM-NXLTMZR');</script>
+    <!-- End Google Tag Manager -->
+
 </head>
 <body>
-    <h1>Exemplo de formulário para o Show me the Leads</h1>
-    <form method="POST" action="https://smtl.gama.academy/leads/bfee94f1-b7e1-11ea-8228-89cff86db9a0">
-      <input
-        name="name"
-        type="text"
-        pattern="^\D{2,}\s[\D\s]{2,}$"
-        title="Digite seu nome completo"
-        required
-      />
-      <input
-        name="email"
-        type="email"
-        title="Digite um email válido"
-        required
-      />
-      <input name="redirectTo" type="hidden" value="https://gama.academy" />
-      <input name="debugMode" type="hidden" value="true" />
-      <input type="submit" />
-    </form>
+    <div>
+        <h1>Exemplo de formulário para o Show me the Leads</h1>
+        <form method="POST" action="https://smtl.gama.academy/leads/bfee94f1-b7e1-11ea-8228-89cff86db9a0">
+        <input
+            name="name"
+            type="text"
+            pattern="^\D{2,}\s[\D\s]{2,}$"
+            title="Digite seu nome completo"
+            required
+        />
+        <input
+            name="email"
+            type="email"
+            title="Digite um email válido"
+            required
+        />
+        <input name="redirectTo" type="hidden" value="https://gama.academy" />
+        <input name="debugMode" type="hidden" value="true" />
+        <input type="submit" />
+        </form>
+    </div>
+    <!-- Google Tag Manager (noscript) -->
+    <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-NXLTMZR"
+    height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+    <!-- End Google Tag Manager (noscript) -->
 </body>
 </html>
