--- a/gamaacademy/noquadro/index.html
+++ b/gamaacademy/noquadro/index.html
@@ -39,7 +39,7 @@
             title="Digite um email válido"
             required
         />
-        <input name="redirectTo" type="hidden" value="https://gama.academy" />
+        <input name="redirectTo" type="hidden" value="obrigado.html" />
         <input name="debugMode" type="hidden" value="true" />
         <input type="submit" />
         </form>
