adicionando logo no title

--- a/gamaacademy/noquadro/index.html
+++ b/gamaacademy/noquadro/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <link rel="shortcut icon" href="img/LOGO3.png">
     <title>No Quadro</title>
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-171089595-1"></script>
