alterações na landing page

--- a/gamaacademy/noquadro/index.html
+++ b/gamaacademy/noquadro/index.html
@@ -24,7 +24,7 @@
 </head>
 <body>
     <div class="img-bg">
-        <img src="" alt="">
+        <img src="img/fotos-background.png" alt="fotos-background">
     </div>
 
     <div id="landing">
@@ -63,15 +63,56 @@
         </div>
     </div>
 
-    <div>
+    <div class="conteudo">
         <h2>O que você vai aprender:</h2>
+        <div id="flex">
+            <div class="icons">
+                <ul>
+                    <li>
+                        <img class="stream" src="img/icone.live.png" alt="icone live">
+                        <p>Ferramentas de Stream</p>
+                    </li>
+                </ul>
+            </div>    
+            <div class="icons">
+                <ul>
+                    <li>
+                        <img class="dicas" src="img/icone.dicas.png" alt="icone dicas">
+                        <p>Ferramentas de Stream</p>
+                    </li>
+                </ul>
+            </div>   
+            <div class="icons">
+                <ul>
+                    <li>
+                        <img class="aula" src="img/icone.aula.png" alt="icone aulas">
+                        <p>Ferramentas de Stream</p>
+                    </li>
+                </ul>
+            </div>   
+        </div>  
+        <div class="texto">
+            <h2>Porque baixar nosso E-book:</h2>
+            <p>Não restam dúvidas de que a era digital já é uma realidade no setor educacional, e nós não estamos falando o uso do celular nas salas de aulas pelos estudantes. A Pandemia acelerou os processos, e se a sua nova realidade é atrair a atenção dos seus alunos, alunas e alunes do outro lado da tela, nós vamos te ajudar.</p>
+
+            <p> Os tutoriais de ferramentas, voltadas para a área educacional, trarão praticidade e facilidade a vocês, docentes. Isso porque ajudam desde o planejamento de aulas, até a correção de provas. As plataformas permitem melhorar o processo de aprendizagem on-line, através de aulas mais dinâmicas, conteúdos atrativos e melhoraria da organização das atividades. Essas ferramentas ganham cada vez mais destaque, pois proporcionam uma melhor relação entre estudantes e professores além de aumentar a qualidade do seu ensino.</p>
+            <h2 class="cta">QUERO MELHORAR A RELAÇÃO COM OS ESTUDANTES</h2>
+            <p>Muitas vezes penamos no ambiente online como inadequado para o processo de ensino e aprendizagem. O problema, contudo, não está no lugar onde esse processo acontece, mas em como ele é conduzido por docentes. Nós iremos lhe oferecer ferramentas para ministrar o seu conteúdo da melhor forma.</p>
+            <h2 class="cta">QUERO OFERECER MEU CONTEÚDO DA MELHOR FORMA</h2>
+            <p>Os tempos mudaram e as formas de ensinar e aprender, também. O contato com a tecnologia está transformando a forma nos comportamos, como pensamos, memorizamos e até mesmo como nos concentramos. Por isso, precisamos estar atualizados frente às tecnologias que chegam para nos auxiliar nesta experiência. Estar conectado é um facilitador para seu novo modo de vida.</p>
+            <h2 class="cta">EU QUERO FACILITAR A MINHA EXPERIÊNCIA</h2>
+            <p>Esse EBOOK é pra você, que quer disponibilizar seu conteúdo online, utilizando das melhores ferramentas para gerar no seu aluno uma experiência muito mais completa, no conforto de casa.</p>
+            <p>Esse EBOOK é pra você, professor, que a escola você leciona aderiu as atividades remotas e você precisa dar continuidade ao seu trabalho de sala de aula e disponibilizar seu conteúdo online aos alunos. </p>
+            <p>Esse EBOOK é pra você, que tem domínio sobre um assunto e quer fazer uma grana extra neste período e montar seu primeiro infoproduto com aulas online.</p>
+            <p>Esse EBOOK é pra você, que quer ter acesso a ferramentas que possibilitam a criação e o compartilhamento de gráficos, diagramas e fluxogramas de forma bem intuitiva.</p>
+            <p>Esse EBOOK é pra você, que quer desmistificar o aplicativo que faz a correção automática de provas com questões objetivas. Isso agiliza o trabalho dos professores de instituições de ensino superior, economizando tempo e ainda emitindo estatísticas e relatórios com o desempenho dos estudantes.</p>
+            <p>Esse EBOOK é pra você, que quer conhecer melhor plataformas ajudam a criar apresentações e aulas interativas, compartilhar conteúdos, personalizar lições e avaliações e acompanhar o desempenho dos alunos.</p>
+        </div>        
     </div>
-
-
-
-
-
-
+    <div class="garantir">
+        <h2>PROMOÇÃO de LANÇAMENTO: GRÁTIS APENAS ATÉ DIA 03/07/20 às 23 59</h2>
+        <button>QUERO GARANTIR MEU E-BOOK</button>
+    </div>
     
     <!-- Google Tag Manager (noscript) -->
     <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-NXLTMZR"
