--- a/gamaacademy/noquadro/index.html
+++ b/gamaacademy/noquadro/index.html
@@ -37,7 +37,7 @@
                 PROMOÇÃO de LANÇAMENTO: GRÁTIS APENAS ATÉ DIA 03/07/20 às 23:59
             </h3>     
         </div>
-        <div class="pop-up">
+        <div id="pop-up">
             <img class="logo-form" src="img/logo.png" alt="Logo noQuadro">
            
             <form method="POST" action="https://smtl.gama.academy/leads/bfee94f1-b7e1-11ea-8228-89cff86db9a0">
@@ -112,7 +112,7 @@
     </div>
     <div class="garantir">
         <h2>PROMOÇÃO de LANÇAMENTO: GRÁTIS APENAS ATÉ DIA 03/07/20 às 23 59</h2>
-        <button>QUERO GARANTIR MEU E-BOOK</button>
+        <button><a href="#pop-up">QUERO GARANTIR MEU E-BOOK</a></button>
     </div>
     
     <!-- Google Tag Manager (noscript) -->
