--- a/index.html
+++ b/index.html
@@ -1,139 +1,78 @@
-<!DOCTYPE html>
 <html lang="pt">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <link rel="shortcut icon" href="img/LOGO3.png">
-    <title>No Quadro</title>
-    <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-171089595-1"></script>
-    <script>
-        window.dataLayer = window.dataLayer || [];
-        function gtag(){dataLayer.push(arguments);}
-        gtag('js', new Date());
-        gtag('config', 'UA-171089595-1');
-    </script>
-    <!-- Google Tag Manager -->
-    <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
-        j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
-        'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-        })(window,document,'script','dataLayer','GTM-NXLTMZR');
-    </script>
-    <!-- End Google Tag Manager -->
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">    <link
+        href="https://fonts.googleapis.com/css2?family=Red+Hat+Display:ital,wght@0,400;0,500;0,700;0,900;1,400;1,500;1,700;1,900&amp;display=swap"
+        rel="stylesheet">
+        <link rel="stylesheet" href="style.css">
+        <link rel="shortcut icon" href="img/LOGO3.png">
+        <title>No Quadro</title>
+        <!-- Global site tag (gtag.js) - Google Analytics -->
+        <script async src="https://www.googletagmanager.com/gtag/js?id=UA-171089595-1"></script>
+        <script>
+            window.dataLayer = window.dataLayer || [];
+            function gtag(){dataLayer.push(arguments);}
+            gtag('js', new Date());
+            gtag('config', 'UA-171089595-1');
+        </script>
+        <!-- Google Tag Manager -->
+        <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+            j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+            'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+            })(window,document,'script','dataLayer','GTM-NXLTMZR');
+        </script>
+        <!-- End Google Tag Manager -->
+        <script id="mcjs">!function(c,h,i,m,p){m=c.createElement(h),p=c.getElementsByTagName(h)[0],m.async=1,m.src=i,p.parentNode.insertBefore(m,p)}(document,"script","https://chimpstatic.com/mcjs-connected/js/users/ee72f474c3a45ed9e3dbd5838/527a5ec6a07429432fc149a22.js");</script>
+    
+    </head>
 
-</head>
 <body>
+
+
     <div class="img-bg">
         <img src="img/fotos-background.png" alt="fotos-background">
     </div>
     <div id="retangulo1"></div>
     <div id="chamada1">
         <h1>
-            QUER CONHECER AS FERRAMENTAS QUE IRÃO TRANSFORMAR SUAS AULAS ONLINE EM UMA EXPERIÊNCIA MUITO MAIS COMPLETA? BAIXE O E-BOOK: <strong>COMO DAR AULAS ONLINE</strong>
+            QUER CONHECER AS FERRAMENTAS QUE IRÃO TRANSFORMAR SUAS AULAS ONLINE EM UMA EXPERIÊNCIA MUITO MAIS COMPLETA?
+            BAIXE O E-BOOK: <strong>COMO DAR AULAS ONLINE</strong>
         </h1>
     </div>
     <div id="chamada2">
         <h3>
-            PROMOÇÃO de LANÇAMENTO: GRÁTIS APENAS ATÉ DIA 03/07/20 às 23:59
-        </h3>     
-    </div>   
-    <div id="logo">
-        <img class="logo-form" src="img/logo.png" alt="Logo noQuadro">
+            <span>PROMOÇÃO</span> DE LANÇAMENTO: <SPAN>GRÁTIS</SPAN> APENAS ATÉ DIA 03/07/20 às 23:59
+        </h3>
     </div>
-    <div id="retangulo2"></div>
-        <form method="POST" action="https://smtl.gama.academy/leads/bfee94f1-b7e1-11ea-8228-89cff86db9a0">
-            <div="retangulo4">
-                <input
-                name="name"
-                type="text"
-                pattern="^\D{2,}\s[\D\s]{2,}$"
-                title="Digite seu nome completo"
-                placeholder="Nome Completo*"
-                required
-            />
-            </div>
-            <div id="retangulo5">
-                <input
-                name="email"
-                type="email"
-                title="Digite um email válido"
-                placeholder="E-mail*"
-                required
-            />
-            </div>
+    <div style="
+    top: 50px;
+    position: absolute;
+">
+        <div id="logo">
 
-            <input name="redirectTo" type="hidden" value="obrigado.html" />
-            <input name="debugMode" type="hidden" value="true"/>
-            <div id="retangulo6">
-                <button>BAIXE AGORA!</button>
-            </div>
-        </form>
-            <p>Não quero receber esse conteúdo</p>
-    <div class="conteudo">
-        <h2>O que você vai aprender:</h2>
-        <div id="flex">
-            <div class="icons">
-                <ul>
-                    <li>
-                        <img class="stream" src="img/icone.live.png" alt="icone live">
-                        <p>Ferramentas de Stream</p>
-                    </li>
-                </ul>
-            </div>    
-            <div class="icons">
-                <ul>
-                    <li>
-                        <img class="dicas" src="img/icone.dicas.png" alt="icone dicas">
-                        <p>Ferramentas de Stream</p>
-                    </li>
-                </ul>
-            </div>   
-            <div class="icons">
-                <ul>
-                    <li>
-                        <img class="aula" src="img/icone.aula.png" alt="icone aulas">
-                        <p>Ferramentas de Stream</p>
-                    </li>
-                </ul>
-            </div>   
-        </div>  
-        <div class="texto">
-            <h2>Porque baixar nosso E-book:</h2>
-            <p>Não restam dúvidas de que a era digital já é uma realidade no setor educacional, e nós não estamos falando apenas sobre o uso do celular nas salas de aulas pelos alunos. A Pandemia acelerou os processos. Se a sua nova realidade é atrair a atenção dos seus alunos, alunas e alunes do outro lado da tela, a No Quadro vai te ajudar!</p>
-
-            <p>Os tutoriais de ferramentas, voltadas para a educação a distância (EAD), trarão praticidade e facilidade a vocês, docentes. Isso porque ajudam desde o planejamento de aulas, até a correção de provas. As plataformas permitem melhorar o processo de aprendizagem on-line, através de aulas mais dinâmicas, conteúdos atrativos e melhoraria da organização das atividades. Essas ferramentas ganham cada vez mais destaque, pois proporcionam uma melhor relação entre estudantes e professores além de aumentar a qualidade do seu ensino a distância.</p>
-
-            <h2 class="cta">QUERO MELHORAR A RELAÇÃO COM OS ESTUDANTES</h2>
-            <p>Muitas vezes pensamos no ambiente online como inadequado para o processo de ensino e aprendizagem. O problema, contudo, não está no lugar que esse processo acontece, mas sim em como ele é conduzido, e a No Quadro oferece dicas de ferramentas para ministrar o seu conteúdo da melhor forma.</p>
-
-            <h2 class="cta">QUERO OFERECER MEU CONTEÚDO DA MELHOR FORMA</h2>
-
-            <p>Os tempos mudaram e as formas de ensinar e aprender também. O contato com a tecnologia está transformando a forma como nos comportamos, como pensamos, memorizamos e até mesmo como nos concentramos. Por isso, precisamos estar atualizados frente às tecnologias que chegam para nos auxiliar nesta experiência. Estar conectado é um facilitador para seu novo modo de vida.</p>
-
-            <h2 class="cta">EU QUERO FACILITAR A MINHA EXPERIÊNCIA</h2>
-
-            <p>Esse EBOOK é para você, que quer disponibilizar seu conteúdo online, utilizando das melhores ferramentas para gerar no seu aluno um ensino a distância muito mais completo, uma experiência satisfatória para os dois lados.</p>
-
-            <p>Esse EBOOK é para você, professor, que a escola na qual leciona, aderiu às atividades remotas e você está comprometido em dar continuidade ao seu trabalho de sala de aula e disponibilizar seu conteúdo através do ensino a distância aos alunos.</p>
-
-            <p>Esse EBOOK é para você, que tem domínio sobre um assunto e quer fazer uma grana extra neste período e montar seu primeiro infoproduto com aulas online.</p>
-
-            <p>Esse EBOOK é para você, que quer ter acesso a ferramentas que possibilitam a criação e o compartilhamento de gráficos, diagramas e fluxogramas de forma bem intuitiva.</p>
-
-            <p>Esse EBOOK é para você, que quer desmistificar o aplicativo que faz a correção automática de provas com questões objetivas. Isso agiliza o trabalho dos professores de instituições de ensino superior, economizando tempo e ainda emitindo estatísticas e relatórios com o desempenho dos estudantes. </p>
-
-            <p>Esse EBOOK é para você, que quer conhecer melhor as plataformas que ajudam a criar apresentações e aulas interativas, compartilhar conteúdos, personalizar tarefas e avaliações, além de acompanhar o desempenho dos alunos.</p>
-        </div>        
+        </div>
+        <div id="retangulo2"></div>
     </div>
-    <div class="garantir">
-        <h2>PROMOÇÃO de LANÇAMENTO: GRÁTIS APENAS ATÉ DIA 03/07/20 às 23 59</h2>
-        <button><a href="#pop-up">QUERO GARANTIR MEU E-BOOK</a></button>
+
+    <form method="POST" action="https://smtl.gama.academy/leads/bfee94f1-b7e1-11ea-8228-89cff86db9a0">
+        <input name="name" type="text" pattern="^\D{2,}\s[\D\s]{2,}$" title="Digite seu nome completo"
+            placeholder="Nome Completo*" required="" class="input-form">
+        <input name="email" type="email" title="Digite um email válido" placeholder="E-mail*" required=""
+            class="input-form">
+
+        <input name="redirectTo" type="hidden">
+        <input name="debugMode" type="hidden" value="true">
+        <button class="btn-enviar">BAIXE AGORA!</button>
+
     </div>
-    
+    </form>
+    <script>
+        document.querySelector("input[name='redirectTo']").value= window.location.origin + "/files/EBook - No Quadro.pdf";
+    </script>
     <!-- Google Tag Manager (noscript) -->
     <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-NXLTMZR"
     height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     <!-- End Google Tag Manager (noscript) -->
 </body>
+
 </html>
