adicionado pagina de agradecimento

--- a/index.html
+++ b/index.html
@@ -31,30 +31,26 @@
 </head>
 
 <body>
-
-
     <div class="img-bg">
         <img src="img/fotos-background.png" alt="fotos-background">
     </div>
     <div id="retangulo1"></div>
     <div id="chamada1">
         <h1>
-            QUER CONHECER AS FERRAMENTAS QUE IRÃO TRANSFORMAR SUAS AULAS ONLINE EM UMA EXPERIÊNCIA MUITO MAIS COMPLETA?
+            QUER CONHECER AS FERRAMENTAS QUE IRÃO TRANSFORMAR SUAS AULAS ONLINE EM UMA EXPERIÊNCIA MUITO MAIS COMPLETA? <br>
             BAIXE O E-BOOK: <strong>COMO DAR AULAS ONLINE</strong>
         </h1>
     </div>
     <div id="chamada2">
         <h3>
-            <span>PROMOÇÃO</span> DE LANÇAMENTO: <SPAN>GRÁTIS</SPAN> APENAS ATÉ DIA 03/07/20 às 23:59
+            <span>PROMOÇÃO</span> DE LANÇAMENTO: <SPAN>GRÁTIS</SPAN> APENAS ATÉ DIA 03/07/20 às 09:37
         </h3>
     </div>
     <div style="
     top: 50px;
     position: absolute;
 ">
-        <div id="logo">
-
-        </div>
+        <div id="logo"></div>
         <div id="retangulo2"></div>
     </div>
 
@@ -64,7 +60,7 @@
         <input name="email" type="email" title="Digite um email válido" placeholder="E-mail*" required=""
             class="input-form">
 
-        <input name="redirectTo" type="hidden">
+        <input name="redirectTo" type="hidden"  value="#obrigado.html">
                 <input type="submit" class="btn-enviar" value="BAIXE AGORA!" />
         </div>
     </form>
