--- a/obrigado.html
+++ b/obrigado.html
@@ -3,7 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Red+Hat+Display:ital,wght@0,400;0,500;0,700;0,900;1,400;1,500;1,700;1,900&amp;display=swap"
+        rel="stylesheet">
     <link rel="stylesheet" href="style.css">
+    <link rel="shortcut icon" href="img/LOGO3.png">
     <title>No Quadro</title>
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-171089595-1"></script>
@@ -26,17 +30,15 @@
     <div class="img-bg">
         <img src="img/fotos-background.png" alt="fotos-background">
     </div>
-
+    <div id="retangulo1"></div>
     <div id="landing">
         <div>
             <img class="logo-form" src="img/logo.png" alt="Logo noQuadro">     
         </div>
-        <div class="pop-up">
-            <h1>PARABÉNS</h1>
-            <h2>Seu E-book foi enviado!</h3> 
-            <h3>A evolução da sua aula online começa agora!</h5>
-            <p>Fique de olho no seu e-mail, olhe também aa caixas de <em>lixo eletrônico e spam.</em></p>
-        </div>
+        <div id="retangulo2obrigado"></div>
+            <h1 id="parabens">PARABÉNS</h1>
+            <h3 id="ebook"><strong>Seu E-book foi enviado!</strong><br>A evolução da sua aula online começa agora!<br><br><br>
+                Fique de olho no seu e-mail, olhe também as caixas de <em>lixo eletrônico e spam.</em></h3>
     </div>
         <!-- Google Tag Manager (noscript) -->
         <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-NXLTMZR"
