responsividade pagina de agradecimento

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         <input name="email" type="email" title="Digite um email válido" placeholder="E-mail*" required=""
             class="input-form">
 
-        <input name="redirectTo" type="hidden"  value="#obrigado.html">
+        <input name="redirectTo" type="hidden" value="/obrigado.html">
                 <input type="submit" class="btn-enviar" value="BAIXE AGORA!" />
         </div>
     </form>
