--- a/obrigado.html
+++ b/obrigado.html
@@ -30,7 +30,7 @@
     <div class="img-bg">
         <img src="img/fotos-background.png" alt="fotos-background">
     </div>
-    <div id="retangulo1"></div>
+    <div id="retangulo1obrigado"></div>
     <div id="landing">
         <div>
             <img class="logo-form" src="img/logo.png" alt="Logo noQuadro">     
