atualizacoes index mapa de calor

--- a/index.html
+++ b/index.html
@@ -9,6 +9,19 @@
     <link rel="stylesheet" href="style.css">
     <link rel="shortcut icon" href="img/LOGO3.png">
     <title>No Quadro</title>
+
+    <!-- Hotjar Tracking Code for https://noquadro.info/ -->
+    <script>
+    (function(h,o,t,j,a,r){
+        h.hj=h.hj||function(){(h.hj.q=h.hj.q||[]).push(arguments)};
+        h._hjSettings={hjid:1880382,hjsv:6};
+        a=o.getElementsByTagName('head')[0];
+        r=o.createElement('script');r.async=1;
+        r.src=t+h._hjSettings.hjid+j+h._hjSettings.hjsv;
+        a.appendChild(r);
+    })(window,document,'https://static.hotjar.com/c/hotjar-','.js?sv=');
+    </script>
+
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-171089595-1"></script>
     <script>
@@ -17,6 +30,7 @@
         gtag('js', new Date());
         gtag('config', 'UA-171089595-1');
     </script>
+    
     <!-- Google Tag Manager -->
     <script>(function (w, d, s, l, i) {
         w[l] = w[l] || []; w[l].push({ 'gtm.start': new Date().getTime(), event: 'gtm.js' }); var f = d.getElementsByTagName(s)[0],
@@ -64,6 +78,44 @@
                 <input type="submit" class="btn-enviar" value="BAIXE AGORA!" />
         </div>
     </form>
+<!-- 
+    <div class="conteudo">
+        <h2>O que você vai aprender:</h2>
+    </div>
+
+    <div id="flex">
+        <div class="icons">
+            <ul>
+                <li>
+                    <img class="stream" src="img/icone.live.png" alt="icone live">
+                    <p>Ferramentas de Stream</p>
+                </li>
+            </ul>
+        </div>    
+        <div class="icons">
+            <ul>
+                <li>
+                    <img class="dicas" src="img/icone.dicas.png" alt="icone dicas">
+                    <p>Ferramentas de Stream</p>
+                </li>
+            </ul>
+        </div>   
+        <div class="icons">
+            <ul>
+                <li>
+                    <img class="aula" src="img/icone.aula.png" alt="icone aulas">
+                    <p>Ferramentas de Stream</p>
+                </li>
+            </ul>
+        </div>   
+    </div>  
+
+    <div>
+        <h2>Porque baixar o nosso E-Book:</h2>
+        <p>Não restam dúvidas de que a era digital já é uma realidade no setor educacional, e nós não estamos falando apenas sobre o uso do celular nas salas de aulas pelos alunos. A Pandemia acelerou os processos. Se a sua nova realidade é atrair a atenção dos seus alunos, alunas e alunes do outro lado da tela, a No Quadro vai te ajudar!
+        </p>
+    </div> -->
+
     <script>
         document.querySelector("input[name='redirectTo']").value = window.location.origin + "/files/EBook - No Quadro.pdf";
     </script>
