--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                 <input type="submit" class="btn-enviar" value="BAIXE AGORA!" />
         </div>
     </form>
-<!-- 
+ 
     <div class="conteudo">
         <h2>O que você vai aprender:</h2>
     </div>
@@ -110,11 +110,42 @@
         </div>   
     </div>  
 
-    <div>
+    <div class="texto">
         <h2>Porque baixar o nosso E-Book:</h2>
-        <p>Não restam dúvidas de que a era digital já é uma realidade no setor educacional, e nós não estamos falando apenas sobre o uso do celular nas salas de aulas pelos alunos. A Pandemia acelerou os processos. Se a sua nova realidade é atrair a atenção dos seus alunos, alunas e alunes do outro lado da tela, a No Quadro vai te ajudar!
-        </p>
-    </div> -->
+        <p>Para você que quer aprender a otimizar como passa seu conteúdo no ensino a distância, a No Quadro pode te ajudar com o nosso compilado de dicas sobre ferramentas e programas incríveis, que disponibilizamos sem custo, pelo nosso Ebook.</br>
+        O contato com a tecnologia está transformando a forma como nos comportamos, como pensamos, memorizamos e até mesmo como nos concentramos. </br>
+        Precisamos estar atualizados frente às tecnologias que chegam para nos auxiliar nesta experiência. Estar conectado é um facilitador para seu novo modo de vida. </br>
+        A era digital já é uma realidade no setor educacional e não estamos falando apenas sobre o uso do celular nas salas de aulas pelos alunos. A pandemia está acelerando essa mudança.</br>
+        Os tutoriais de ferramentas, voltadas para a educação a distância (EAD), trazem praticidade e facilidade aos educadores. Ajudam no planejamento de aulas, até a correção de provas. O uso correto das plataformas melhoram o processo de aprendizagem on-line e a No Quadro oferece dicas de ferramentas para ministrar o seu conteúdo da melhor forma.</p>
+
+        <button><a href="#chamada1">QUERO MELHORAR A RELAÇÃO COM OS ESTUDANTES</a></button>
+        
+        <ul>
+            <li>Aulas mais dinâmicas</li>
+            <li>Conteúdos atrativos</li>
+            <li>Melhoria da organização das atividades</li>
+            <li>Melhoria da relação entre estudantes e professores</li>
+            <li>Aumento da qualidade do seu ensino a distância. Atrai a atenção dos seus alunos, alunas e alunes do outro lado da tela </li>
+        </ul>
+        <button><a href="#chamada1">QUERO OFERECER MEU CONTEÚDO DA MELHOR FORMA</a></button>  
+        <ul>  
+            <li>Conheça melhor as plataformas que ajudam a criar apresentações e aulas interativas, personalizar tarefas e avaliações, além de acompanhar o desempenho dos alunos</li>
+            <li>Disponibilize seu conteúdo online, utilizando das melhores ferramentas para um ensino a distância muito mais completo  e  possibilite a criação e o compartilhamento de gráficos, diagramas e fluxogramas de forma bem intuitiva.</li>
+            <li>Tenha uma experiência incrível para você e seus estudantes.</li>
+            <li>Comprometa-se em dar continuidade ao seu trabalho de sala de aula, agora no ambiente online e de maneira eficiente.</li>
+            <li>Desmistifique o aplicativo que faz a correção automática de provas com questões objetivas (o qual agiliza o trabalho dos professores de instituições de ensino superior, economizando tempo e ainda emitindo estatísticas e relatórios com o desempenho dos estudantes).</li>
+            <li>Monte o seu primeiro infoproduto com aulas online sobre um assunto que tenha domínio e consiga uma outra fonte de renda nesse período.</li>
+        </ul>
+        <button><a href="#chamada1">EU QUERO FACILITAR A MINHA EXPERIÊNCIA</a></button>      
+
+        <div id="chamada3">
+            <h3>
+                <span>PROMOÇÃO</span> DE LANÇAMENTO: <SPAN>GRÁTIS</SPAN> APENAS ATÉ DIA 03/07/20 às 09:37
+            </h3>
+        </div>
+    
+
+    </div>
 
     <script>
         document.querySelector("input[name='redirectTo']").value = window.location.origin + "/files/EBook - No Quadro.pdf";
