alteracoes em comentario no index

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                 <input type="submit" class="btn-enviar" value="BAIXE AGORA!" />
         </div>
     </form>
- 
+<!--  
     <div class="conteudo">
         <h2>O que você vai aprender:</h2>
     </div>
@@ -145,7 +145,7 @@
         </div>
     
 
-    </div>
+    </div> -->
 
     <script>
         document.querySelector("input[name='redirectTo']").value = window.location.origin + "/files/EBook - No Quadro.pdf";
