--- a/obrigado.html
+++ b/obrigado.html
@@ -37,8 +37,7 @@
         </div>
         <div id="retangulo2obrigado"></div>
             <h1 id="parabens">PARABÉNS</h1>
-            <h3 id="ebook"><strong>Seu E-book foi enviado!</strong><br>A evolução da sua aula online começa agora!<br><br><br>
-                Fique de olho no seu e-mail, olhe também as caixas de <em>lixo eletrônico e spam.</em></h3>
+            <h3 id="ebook"><strong>Seu E-book foi enviado!</strong><br><br>A evolução da sua aula online começa agora!<br><br></h3>
     </div>
         <!-- Google Tag Manager (noscript) -->
         <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-NXLTMZR"
