--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
             <input name="name" type="text" pattern="^\D{2,}\s[\D\s]{2,}$" title="Digite seu nome completo" placeholder="Nome Completo*" required="" class="input-form">
             <input name="email" type="email" title="Digite um email válido" placeholder="E-mail*" required="" class="input-form">
 
-            <input name="redirectTo" type="hidden">
+            <input name="redirectTo" type="hidden" value="obrigado.html">
             <input type="submit" class="btn-enviar" value="BAIXE AGORA!">
 
         </form>
