--- a/obrigado.html
+++ b/obrigado.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -13,19 +14,21 @@
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-171089595-1"></script>
     <script>
         window.dataLayer = window.dataLayer || [];
-        function gtag(){dataLayer.push(arguments);}
+        function gtag() { dataLayer.push(arguments); }
         gtag('js', new Date());
         gtag('config', 'UA-171089595-1');
     </script>
     <!-- Google Tag Manager -->
-    <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
-        j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
-        'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-        })(window,document,'script','dataLayer','GTM-NXLTMZR');
+    <script>(function (w, d, s, l, i) {
+            w[l] = w[l] || []; w[l].push({ 'gtm.start': new Date().getTime(), event: 'gtm.js' }); var f = d.getElementsByTagName(s)[0],
+                j = d.createElement(s), dl = l != 'dataLayer' ? '&l=' + l : ''; j.async = true; j.src =
+                    'https://www.googletagmanager.com/gtm.js?id=' + i + dl; f.parentNode.insertBefore(j, f);
+        })(window, document, 'script', 'dataLayer', 'GTM-NXLTMZR');
     </script>
     <!-- End Google Tag Manager -->
 
 </head>
+
 <body>
     <div class="img-bg">
         <img src="img/fotos-background.png" alt="fotos-background">
@@ -33,16 +36,34 @@
     <div id="retangulo1obrigado"></div>
     <div id="landing">
         <div>
-            <img class="logo-form" src="img/logo.png" alt="Logo noQuadro">     
+            <img class="logo-form" src="img/logo.png" alt="Logo noQuadro">
         </div>
         <div id="retangulo2obrigado"></div>
-            <h1 id="parabens">PARABÉNS</h1>
-            <h3 id="ebook"><strong>Seu E-book foi enviado!</strong><br>A evolução da sua aula online começa agora!<br><br><br>
-                Fique de olho no seu e-mail, olhe também as caixas de <em>lixo eletrônico e spam.</em></h3>
+        <h1 id="parabens">PARABÉNS</h1>
+        <h3 id="ebook"><strong> <a href="files/EBook - No Quadro.pdf" target="_blank">Clique aqui</a> para baixar seu
+                E-book.</strong><br>A evolução da sua aula online começa agora!
+        </h3>
+        <div id="boxredessociais">
+            <p>Nos acompanhe nas redes sociais!</p>
+            <ul id="redessociais">
+                <li class="instagram">
+                    <a href="https://www.instagram.com/noquadro.info" target="_blank">
+                        <img src="img/instagram.png" alt="Instagram">
+                    </a>
+                </li>
+                <li class="facebook">
+                    <a href="https://www.facebook.com/No-Quadro-109305204173695/" target="_blank">
+                        <img src="img/facebook.png" alt="Facebook">
+                    </a>
+                </li>
+            </ul>
+        </div>
+
     </div>
-        <!-- Google Tag Manager (noscript) -->
-        <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-NXLTMZR"
-            height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
-            <!-- End Google Tag Manager (noscript) -->
+    <!-- Google Tag Manager (noscript) -->
+    <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-NXLTMZR" height="0" width="0"
+            style="display:none;visibility:hidden"></iframe></noscript>
+    <!-- End Google Tag Manager (noscript) -->
 </body>
+
 </html>
