--- a/obrigado.html
+++ b/obrigado.html
@@ -7,7 +7,7 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Red+Hat+Display:ital,wght@0,400;0,500;0,700;0,900;1,400;1,500;1,700;1,900&amp;display=swap"
         rel="stylesheet">
-    <link rel="stylesheet" href="style.css">
+        <link href="css/noquadro.css" rel="stylesheet" type="text/css">
     <link rel="shortcut icon" href="img/LOGO3.png">
     <title>No Quadro</title>
     <!-- Global site tag (gtag.js) - Google Analytics -->
@@ -30,19 +30,20 @@
 </head>
 
 <body>
-    <div class="img-bg">
+<!--<div class="img-bg">
         <img src="img/fotos-background.png" alt="fotos-background">
-    </div>
-    <div id="retangulo1obrigado"></div>
+    </div>-->
+    <!--<div id="retangulo1obrigado"></div>-->
     <div id="landing">
-        <div>
+        <!--<div>
             <img class="logo-form" src="img/logo.png" alt="Logo noQuadro">
-        </div>
+        </div>-->
         <div id="retangulo2obrigado"></div>
-        <h1 id="parabens">PARABÉNS</h1>
-        <h3 id="ebook"><strong> <a href="files/EBook - No Quadro.pdf" target="_blank">Clique aqui</a> para baixar seu
-                E-book.</strong><br>A evolução da sua aula online começa agora!
+        <h1 id="parabens">PRONTO!</h1>
+        <h3 id="ebook"><strong>O cadastro está concluído, agora é só clicar para adquirir o E-BOOK!</strong><br><br>A evolução da sua aula online começa agora!
         </h3>
+
+        <a id="baixar" href="files/EBook - No Quadro.pdf" target="_blank">BAIXAR AGORA!</a>
         <div id="boxredessociais">
             <p>Nos acompanhe nas redes sociais!</p>
             <ul id="redessociais">
