--- a/home.html
+++ b/home.html
@@ -6,9 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>No Quadro</title>
     <meta name="Description" content="Transforme suas aulas online em uma experiência mais completa.">
-    
+
     <link href="https://fonts.googleapis.com/css2?family=Red+Hat+Text:ital,wght@0,400;0,500;0,700;1,400;1,500;1,700&display=swap" rel="stylesheet">
-        <link href="css/noquadro.css" rel="stylesheet" type="text/css">
+    <link href="css/noquadro.css" rel="stylesheet" type="text/css">
+    <link rel="shortcut icon" href="img/LOGO3.png">
+    
 </head>
 
 <body>
