--- a/index.html.html
+++ b/index.html.html
@@ -16,7 +16,7 @@
 <body>
     <div class="principal">
     <div class="container">
-        <div class="box-topo">
+        <div id="box-topo">
             <div id="retangulo1">
                 <div id="chamada1">
                     <h1>
@@ -74,7 +74,7 @@
                 <div class="box-imagem">
                     <img src="img/Icone.live.png" alt="Live">
                 </div>
-                <a href="#topo" class="botao-conteudo">Baixar o e-book</a>
+                <a href="#box-topo" class="botao-conteudo">Baixar o e-book</a>
             </div>
 
             <div class="conteudo">
@@ -94,7 +94,7 @@
                             lado da tela.</li>
                     </ul>
                 </div>
-                <a href="#topo" class="botao-conteudo">Adquirir o e-book</a>
+                <a href="#box-topo" class="botao-conteudo">Adquirir o e-book</a>
             </div>
 
             <div class="conteudo">
@@ -115,7 +115,7 @@
                 <div class="box-imagem">
                     <img src="img/icone.aula.png" alt="Aula">
                 </div>
-                <a href="#topo" class="botao-conteudo">receber o e-book</a>
+                <a href="#box-topo" class="botao-conteudo">receber o e-book</a>
             </div>
 
             <div class="box-mensagem">
