--- a/obrigado.html
+++ b/obrigado.html
@@ -4,12 +4,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="Description" content="Transforme suas aulas online em uma experiência mais completa.">
+
     <link
         href="https://fonts.googleapis.com/css2?family=Red+Hat+Display:ital,wght@0,400;0,500;0,700;0,900;1,400;1,500;1,700;1,900&amp;display=swap"
         rel="stylesheet">
-        <link href="css/noquadro.css" rel="stylesheet" type="text/css">
+    <link href="css/noquadro.css" rel="stylesheet" type="text/css">
     <link rel="shortcut icon" href="img/LOGO3.png">
+    
     <title>No Quadro</title>
+    
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-171089595-1"></script>
     <script>
