--- a/index.html
+++ b/index.html
@@ -56,13 +56,10 @@
                             <form method="POST"
                                 action="https://smtl.gama.academy/leads/bfee94f1-b7e1-11ea-8228-89cff86db9a0">
                                 <input name="name" type="text" pattern="^\D{2,}\s[\D\s]{2,}$"
-                                    title="Digite seu nome completo" placeholder="Nome Completo*" required=""
-                                    class="input-name">
-                                <input name="email" type="email" title="Digite um email válido" placeholder="E-mail*"
-                                    required="" class="input-email">
+                                    title="Digite seu nome completo" placeholder="Nome Completo*" required="" class="input-name">
+                                <input name="email" type="email" title="Digite um email válido" placeholder="E-mail*" required="" class="input-email">
 
-                                <input name="redirectTo" type="hidden">
-                                <input type="submit" class="btn-enviar" value="Cadastre-se">
+                                <button class="obrigado"><a href="obrigado.html">Cadastre-se</a></button>
 
                             </form>
 
